syntax = "proto3";

package intr.v1;
option go_package="intr/v1;intrv1";

service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  rpc Collect(CollectRequest) returns (CollectResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message GetByIdsRequest {
  int64 uid = 1;
  string biz = 2;
  repeated int64 biz_ids = 3;
}

message GetByIdsResponse {
  map<int64, Interactive> intrs = 1;
}

message GetRequest {
  int64 uid = 1;
  string biz = 2;
  int64 biz_id = 3;
}

message GetResponse {
  Interactive intr = 1;
}

message Interactive {
  string biz = 1;
  int64 biz_id = 2;

  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool  liked = 6;
  bool  collected = 7;
}

message CollectRequest {
  int64 uid = 1;
  string biz = 2;
  int64 biz_id = 3;
  int64 cid = 4;
}

message CollectResponse {

}

message IncrReadCntRequest {
  string  biz = 1;
  int64   biz_id = 2;
}

message IncrReadCntResponse {
  // 有些公司的规范
  // Code
  // Msg
  // Data
}

message LikeRequest {
  int64 uid = 1;
  string biz = 2;
  int64 biz_id = 3;
}

message LikeResponse {

}

message CancelLikeRequest {
  int64 uid = 1;
  string biz = 2;
  int64 biz_id = 3;
}

message CancelLikeResponse {

}